test/razor.test.views/sections/error/sectionIsNotFound.raz
@Html.section(Model.sectionName, true)